tests/neg-custom-args/captures/i23207.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23207.scala:15:17 ---------------------------------------
15 |  val a: A = box.x // error
   |             ^^^^^
   |             Found:    (box.x : (b : B^{io})^{b})
   |             Required: A
   |
   | longer explanation available when compiling with `-explain`
